feat: :bug: update code Html Main

--- a/main.HTML
+++ b/main.HTML
@@ -1,4 +1,47 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Guía de Ejercicios Físicos</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f3f3f3;
+      padding: 20px;
+    }
+    h1 {
+      color: #2e7d32;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin: 10px 0;
+    }
+    a {
+      text-decoration: none;
+      color: #1565c0;
+      font-weight: bold;
+    }
+    a:hover {
+      color: #0d47a1;
+    }
+  </style>
+</head>
+<body>
+  <h1>Guía de Ejercicios Físicos</h1>
+  <p>Haz clic en cada tipo de ejercicio para ver su descripción, beneficios e instrucciones:</p>
+  <ul>
+    <li><a href="cardio.md" target="_blank">Cardio</a></li>
+    <li><a href="Fuerza.md" target="_blank">Fuerza</a></li>
+    <li><a href="Ciclismo.md" target="_blank">Ciclismo</a></li>
+    <li><a href="EntrenamientoFuncional.md" target="_blank">EntrenamientoFuncional</a></li> 
+    <li><a href="Flexibilidad.md" target="_blank">Flexibilidad</a></li>
+    <li><a href="cardio.md" target="_blank">Cardio</a></li>
+    <li><a href="Pilates.md" target="_blank">Pilates</a></li>
+    <li><a href="Yoga.md" target="_blank">Yoga</a></li>
+  
 
 
 
